Sculpt: Undo doesn't bring previous stored mesh after calling Mesh extract operation #103261

Closed
opened 2022-12-16 08:46:01 +01:00 by Hoang Duy Tran · 9 comments
Member

System Information
Operating system: macOS-10.15.7-x86_64-i386-64bit 64 Bits

Blender Version
Broken: version: 3.5.0 Alpha, branch: master, commit date: 2022-12-02 21:53, hash: 9719fd6964

Short Description
Undo doesn't bring back previous image of the mesh after performing the Mesh extract operation
Same happens when prior undo step is selected from Undo history

Steps to Reproduce

  • Open attached file
  • Draw some masking lines
  • Invert the mask using Ctrl-I, so pieces are masked, not lines
  • Execute Mask Extract,
  • Notice a Mesh object is created in the Outliner
  • Edit > Undo History and jump back where mask lines were drawn
  • Notice visually you cannot go back
    #103261.blend
    Screenshot 2022-12-16 at 07.37.12.png
    Screenshot 2022-12-16 at 07.37.36.png
**System Information** Operating system: macOS-10.15.7-x86_64-i386-64bit 64 Bits **Blender Version** Broken: version: 3.5.0 Alpha, branch: master, commit date: 2022-12-02 21:53, hash: `9719fd6964` **Short Description** Undo doesn't bring back previous image of the mesh after performing the `Mesh extract operation` Same happens when prior undo step is selected from `Undo history` **Steps to Reproduce** - Open attached file - Draw some masking lines - Invert the mask using Ctrl-I, so pieces are masked, not lines - Execute `Mask Extract`, - Notice a Mesh object is created in the Outliner - Edit > Undo History and jump back where mask lines were drawn - Notice visually you cannot go back [#103261.blend](https://archive.blender.org/developer/F14062201/T103261.blend) ![Screenshot 2022-12-16 at 07.37.12.png](https://archive.blender.org/developer/F14061749/Screenshot_2022-12-16_at_07.37.12.png) ![Screenshot 2022-12-16 at 07.37.36.png](https://archive.blender.org/developer/F14061751/Screenshot_2022-12-16_at_07.37.36.png)
Author
Member

Added subscriber: @hoanguk

Added subscriber: @hoanguk
Pratik Borhade changed title from Sculpt - unable to go back on Undo History to Sculpt: Undo doesn't bring previous stored mesh after calling Mesh extract operation 2022-12-16 11:47:32 +01:00
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Added subscriber: @JosephEagar

Added subscriber: @JosephEagar
Member

This appears to be the unfamous bug where the first global undo push after a sculpt one is ignored.

This appears to be the unfamous bug where the first global undo push after a sculpt one is ignored.

This issue was referenced by 6fbb4d7051

This issue was referenced by 6fbb4d70516ef2cf84ae3b07297a749c502abd16

This issue was referenced by 48f0d5de54

This issue was referenced by 48f0d5de544a0cc70ab3324f94f44dde7b7a4c21

This issue was referenced by 8666791b2e

This issue was referenced by 8666791b2e7542913e824a34eed2e579381377b0
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Joseph Eagar self-assigned this 2022-12-18 16:51:17 +01:00
Bastien Montagne added this to the Core project 2023-02-09 15:43:46 +01:00
Bastien Montagne removed this from the Core project 2023-02-09 18:19:07 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#103261
No description provided.