Fix T103261: Undo after mask extract doesn't restore active object